# tracktheprice

./: .gitignore  Presentation.ipynb  README.md  convert.py  db.py  download.ipynb  download.py  extract.py  extract_and_store.py  model.py  package.json  pyproject.toml  rise.css  tracktheprice.db  various_plots.py  various_stats.py  visualize_prices_csv.py  visualize_prices_html.py
