[tool.poetry]
name = "tracktheprice"
version = "0.1.0"
description = ""
authors = ["Philippe TONY <philippe.tony@zenika.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pdftotext = "^2.2.2"
pytesseract = "^0.3.10"
sqlalchemy = "^2.0.15"
matplotlib = "^3.7.1"
airium = "^0.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
