[tool.poetry]
name = "conso-exploitons-nos-tickets-de-caisse-dematerialises"
version = "0.1.0"
description = ""
authors = ["Philippe TONY <philippe.tony@zenika.com>"]

[tool.poetry.dependencies]
python = "^3.10"
rise = "^5.7.1"
jupyter-contrib-nbextensions = "^0.7.0"
pdftotext = "^2.2.2"
pytesseract = "^0.3.10"
sqlalchemy = "^2.0.15"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
